# rednote-operation

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  main.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml
config/: accounts.yaml.template  config.yaml  publish_selectors.yaml
database/: schema.sql
database/migrations/: env.py
database/migrations/versions/: 0c24fffa216a_initial_schema.py
docs/: first_run.md
frontend/: index.html  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: Sidebar.vue  StatCard.vue
frontend/src/router/: index.ts
frontend/src/stores/: analysis.ts  competitive.ts  content.ts  dashboard.ts  publish.ts
frontend/src/styles/: main.css
frontend/src/views/: Analysis.vue  Competitive.vue  Content.vue  Dashboard.vue  Publish.vue  Workflows.vue
knowledge/industry/: 00_category_overview.md  01_trending_formats.md  02_seasonal_calendar.md
knowledge/learnings/: 2026-07-14_plan_execution.md  2026-07-14_project_takeover.md  TEMPLATE_operation_log.md
knowledge/platform/: 00_platform_overview.md  01_content_rules.md  02_algorithm_mechanics.md  03_community_guidelines.md
knowledge/prompts/: analysis_prompts.md  copywriting_prompts.md  strategy_prompts.md
knowledge/strategies/: 00_content_strategy.md  01_hashtag_strategy.md  02_posting_schedule.md  03_engagement_tactics.md
knowledge/templates/: copywriting_frameworks.md
knowledge/templates/post_templates/: digital.md  food.md  travel.md
scripts/analyze/: competitor_report.py  content_performance.py  keyword_insights.py
scripts/crawl/: collect_notes.py  login.py  monitor_account.py  probe_view_count.py  search_trending.py
scripts/create/: finalize_post.py  generate_image.py  generate_post.py
scripts/ops/: preflight.py
scripts/publish/: manage_queue.py  publish_now.py  schedule_post.py  smoke_selectors.py
skills/: SKILL_competitor_research.md  SKILL_content_creation.md  SKILL_data_analysis.md  SKILL_operation_workflow.md  SKILL_publishing.md
src/core/: __init__.py  accounts.py  browser.py  config.py  content_pipeline.py  crawl_parse.py  db.py  headers.py  metrics.py  publish_dom.py  rate_limit.py  session.py  utils.py  workflow_auth.py  workflows.py
src/models/: __init__.py
tests/: test_accounts.py  test_alembic.py  test_api.py  test_browser.py  test_config.py  test_content_pipeline.py  test_crawl_helpers.py  test_metrics.py  test_preflight.py  test_publish_dom.py  test_publish_smoke.py  test_schema.py  test_session.py  test_view_count_probe.py  test_workflow_auth.py  test_workflows.py
