[project]
name = "rednote-operation"
version = "0.1.0"
description = "AI-driven Xiaohongshu operation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "playwright>=1.51.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "frontend/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=2.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pre-commit>=4.0.0",
    "commitizen>=4.6.0",
    "types-python-dateutil>=2.9.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
]
