[project]
name = "rednote-operation"
version = "0.1.0"
description = "AI-driven Xiaohongshu operation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "playwright==1.61.0",
    "pyyaml==6.0.3",
    "httpx==0.28.1",
    "pandas==3.0.3",
    "click==8.4.2",
    "jinja2==3.1.6",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "frontend/",
    "scripts/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[dependency-groups]
dev = [
    "ruff==0.15.21",
    "mypy==2.2.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pre-commit==4.6.0",
    "commitizen==4.16.4",
    "types-python-dateutil==2.9.0.20260518",
    "types-pyyaml==6.0.12.20260518",
]
